# wpp-tui

./: .gitignore  Cargo.toml  PRD.md  README.md  build.rs  maestro.toml
.github/workflows/: ci.yml
bridge/: bridge.go  go.mod  go.sum
docs/superpowers/specs/: 2026-06-15-two-pane-chat-layout-design.md
src/: app.rs  bridge.rs  fuzzy.rs  main.rs  notify.rs  qr.rs  store.rs  theme.rs  tui.rs  ui.rs
src/backend/: mock.rs  mod.rs  whatsmeow.rs
src/ui/: chat.rs  mod.rs
src/widgets/: chrome.rs  mod.rs  theme.rs
